--- a/index.html
+++ b/index.html
@@ -1,21 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
 <head>
-<title>Oh My Food</title>
+    <meta charset="utf-8"/>
+    <link rel="shortcut icon" type="image/png" href=""/>
+    <link rel="stylesheet" href="public/css/style.css"/>
+    <title>Oh My Food</title>
 </head>
 
 <body>
     <header>
-        
+        <h1>ohmyfood</h1>
     </header>
 
+    <main>
+        <section class="">
+            <p>
+                Paris, Belleville
+            </p>
+        </section>
 
-    <section></section>
+        <section class="">
+            <h2>Réservez le menu qui vous convient</h2>
+            <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+            <div class="btn-search">
+                <p>Explorer nos restaurants</p>
+            </div>
+        </section>
 
-    <section></section>
+        <section class="">
+            <h2>Fonctionnement</h2>
+        </section>
 
-    <footer></footer>
+        <section class="">
+            <h2>Restaurants</h2>
+        </section>
+    </main>
+    
+
+    <footer>
+        <h2>ohmyfood</h2>
+        <ul>
+            <li>Proposer un restaurant</li>
+            <li>Devenir partenaire</li>
+            <li>Mentions légales</li>
+            <li>XContact</li>
+        </ul>
+    </footer>
 </body>
 
 </html>
