--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8"/>
     <link rel="shortcut icon" type="image/png" href=""/>
+    <link rel="stylesheet" href="public/css/reset.css"/>
     <link rel="stylesheet" href="public/css/style.css"/>
     <title>Oh My Food</title>
 </head>
