--- a/index.html
+++ b/index.html
@@ -6,46 +6,84 @@
     <link rel="shortcut icon" type="image/png" href=""/>
     <link rel="stylesheet" href="public/css/reset.css"/>
     <link rel="stylesheet" href="public/css/style.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/28db65c75a.js" crossorigin="anonymous"></script>
     <title>Oh My Food</title>
 </head>
 
 <body>
     <header>
-        <h1>ohmyfood</h1>
+        <div class="logo">
+            <a href="#"><img src="img/Logo/ohmyfood.png"/></a>
+        </div>
     </header>
 
     <main>
-        <section class="">
-            <p>
-                Paris, Belleville
-            </p>
+        <section id="search">
+            <form class="search__place">
+                <div class="">
+                    <i class="fa-solid fa-location-dot"></i>
+                </div>
+                <div class="place--text">
+                    <input type="search" value="Paris, Belleville"/>
+                </div>
+            </form>
         </section>
 
-        <section class="">
-            <h2>Réservez le menu qui vous convient</h2>
-            <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-            <div class="btn-search">
-                <p>Explorer nos restaurants</p>
+        <section id="reserve">
+            <div class="reservation">
+                <h2>Réservez le menu qui vous convient</h2>
+                <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+                <button class="btn__explore btn--rouned">
+                    <p>Explorer nos restaurants</p>
+                </button>
+            </div>
+            
+        </section>
+
+        <section id="fonction">
+            <h2>Fonctionnement</h2>
+            <div class="pannel">
+                <div class="sticker">
+                    <div class="number">1</div>
+                    <div class="icon">O</div>
+                    <div class="text">Choisissez un restaurant</div>
+                </div>
+
+                <div class="sticker">
+                    <div class="number">2</div>
+                    <div class="icon">O</div>
+                    <div class="text">Composez votre menu</div>
+                </div>
+
+                <div class="sticker">
+                    <div class="number">3</div>
+                    <div class="icon">O</div>
+                    <div class="text">Dégustez au restaurant</div>
+                </div>
             </div>
         </section>
 
-        <section class="">
-            <h2>Fonctionnement</h2>
-        </section>
-
-        <section class="">
+        <section id="restaurants">
             <h2>Restaurants</h2>
         </section>
     </main>
     
 
     <footer>
-        <h2>ohmyfood</h2>
+        <h3>ohmyfood</h3>
         <ul>
-            <li>Proposer un restaurant</li>
-            <li>Devenir partenaire</li>
-            <li>Mentions légales</li>
-            <li>XContact</li>
+            <li>
+                <a href="#">
+                    <i class="fa-solid fa-utensils"></i>
+                     Proposer un restaurant
+                </a>
+            </li>
+            <li><a href="#"><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</a></li>
+            <li><a href="#">Mentions légales</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </footer>
 </body>
