--- a/index.html
+++ b/index.html
@@ -44,25 +44,21 @@
         </section>
 
         <section id="fonction">
-            <h2>Fonctionnement</h2>
-            <div class="pannel">
-                <div class="sticker">
-                    <div class="number">1</div>
-                    <div class="icon">O</div>
-                    <div class="text">Choisissez un restaurant</div>
-                </div>
-
-                <div class="sticker">
-                    <div class="number">2</div>
-                    <div class="icon">O</div>
-                    <div class="text">Composez votre menu</div>
-                </div>
-
-                <div class="sticker">
-                    <div class="number">3</div>
-                    <div class="icon">O</div>
-                    <div class="text">Dégustez au restaurant</div>
-                </div>
+            <div class="fonctionnement">
+                <h2>Fonctionnement</h2>
+                    <div class="pannel">
+                        <div class="sticker">
+                            <div class="sticker__stage sticker--circle">
+                                <p class="sticker--nbr">1</p>
+                            </div>
+                            <div class="sticker__icon">
+                                <i class="fa-solid fa-mobile-screen-button fa-4x icon--stylized"></i>
+                            </div>
+                            <div class="sticker__text">
+                                <p class="text--sizing">Choisissez un restaurant</p>
+                            </div>
+                        </div>
+                    </div>
             </div>
         </section>
 
