--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="fonctionnement">
                 <h2>Fonctionnement</h2>
                     <div class="pannel">
-                        <div class="sticker">
+                        <div class="sticker sticker--backGrey">
                             <div class="sticker__stage sticker--circle">
                                 <p class="sticker--nbr">1</p>
                             </div>
@@ -56,6 +56,32 @@
                             </div>
                             <div class="sticker__text">
                                 <p class="text--sizing">Choisissez un restaurant</p>
+                            </div>
+                        </div>
+
+                        
+                        <div class="sticker sticker--backGrey">
+                            <div class="sticker__stage sticker--circle">
+                                <p class="sticker--nbr">2</p>
+                            </div>
+                            <div class="sticker__icon">
+                                <i class="fa-solid fa-list-ul fa-4x icon--stylized"></i>
+                            </div>
+                            <div class="sticker__text">
+                                <p class="text--sizing">Composez votre menu</p>
+                            </div>
+                        </div>
+
+                        
+                        <div class="sticker sticker--backPurple">
+                            <div class="sticker__stage sticker--circle">
+                                <p class="sticker--nbr">3</p>
+                            </div>
+                            <div class="sticker__icon">
+                                <i class="fa-solid fa-store fa-4x icon--stylizedPurple"></i>
+                            </div>
+                            <div class="sticker__text">
+                                <p class="text--sizing">Dégustez au restaurant</p>
                             </div>
                         </div>
                     </div>
