Section Fonction v3 + Section Restaurant v1 card

--- a/index.html
+++ b/index.html
@@ -89,7 +89,27 @@
         </section>
 
         <section id="restaurants">
-            <h2>Restaurants</h2>
+            <div class="restaurants__list">
+                <h2>Restaurants</h2>
+                <div class="gal">
+                    <div class="card">
+                        <div class="card__pic">
+                            <img class="picture picture--roundedTop" src="img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"alt="Photographie d'un plat chez La palette du goût."/>
+                        </div>
+
+                        <div class="card__text">
+                            <div class="text--column">
+                                <h3 class="name-restaurant">La palette du goût</h3>
+                                <p class="place-restaurant">Ménilmontant</p>
+                            </div>
+                            <div class="icn-favorite">
+                                <i class="fa-regular fa-heart fa-4x"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </section>
     </main>
     
