--- a/index.html
+++ b/index.html
@@ -92,22 +92,79 @@
             <div class="restaurants__list">
                 <h2>Restaurants</h2>
                 <div class="gal">
-                    <div class="card">
+                    <a href="#">
+                        <div class="card">
                         <div class="card__pic">
+                            <span class="new"><p class="new--font">Nouveau</p></span>
                             <img class="picture picture--roundedTop" src="img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"alt="Photographie d'un plat chez La palette du goût."/>
                         </div>
 
                         <div class="card__text">
                             <div class="text--column">
-                                <h3 class="name-restaurant">La palette du goût</h3>
+                                <h4 class="name-restaurant">La palette du goût</h4>
                                 <p class="place-restaurant">Ménilmontant</p>
                             </div>
                             <div class="icn-favorite">
                                 <i class="fa-regular fa-heart fa-4x"></i>
                             </div>
                         </div>
-                    </div>
+                        </div>
+                    </a>
 
+                    <a href="#">
+                        <div class="card">
+                        <div class="card__pic">
+                            <span class="new"><p class="new--font">Nouveau</p></span>
+                            <img class="picture picture--center picture--roundedTop" src="img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"alt="Photographie d'un plat chez La note enchantée."/>
+                        </div>
+
+                        <div class="card__text">
+                            <div class="text--column">
+                                <h4 class="name-restaurant">La note enchantée</h4>
+                                <p class="place-restaurant">Charonne</p>
+                            </div>
+                            <div class="icn-favorite">
+                                <i class="fa-regular fa-heart fa-4x"></i>
+                            </div>
+                        </div>
+                        </div>
+                    </a>
+                    
+                    <a href="#">
+                        <div class="card">
+                        <div class="card__pic">
+                            <img class="picture picture--roundedTop" src="img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"alt="Photographie d'un plat chez À la française."/>
+                        </div>
+
+                        <div class="card__text">
+                            <div class="text--column">
+                                <h4 class="name-restaurant">À la française</h4>
+                                <p class="place-restaurant">Cité Rouge</p>
+                            </div>
+                            <div class="icn-favorite">
+                                <i class="fa-regular fa-heart fa-4x"></i>
+                            </div>
+                        </div>
+                        </div>
+                    </a>
+
+                    <a href="#">
+                        <div class="card">
+                        <div class="card__pic">
+                            <img class="picture picture--roundedTop" src="img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"alt="Photographie d'un plat chez Le délice des sens."/>
+                        </div>
+
+                        <div class="card__text">
+                            <div class="text--column">
+                                <h4 class="name-restaurant">Le délice des sens</h4>
+                                <p class="place-restaurant">Folie-Méricourt</p>
+                            </div>
+                            <div class="icn-favorite">
+                                <i class="fa-regular fa-heart fa-4x"></i>
+                            </div>
+                        </div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </section>
