page des menus : creation et ajout V0

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="restaurants__list">
                 <h2>Restaurants</h2>
                 <div class="gal">
-                    <a href="#">
+                    <a href="sass/pages/menu-laPaletteDuGout.html">
                         <div class="card">
                         <div class="card__pic">
                             <span class="new"><p class="new--font">Nouveau</p></span>
