Clean archi 7.1 - Suppr des font-sizing

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8"/>
     <link rel="shortcut icon" type="image/png" href=""/>
-    <link rel="stylesheet" href="public/css/reset.css"/>
+    <link rel="stylesheet" href="public/css/normalize.css"/>
     <link rel="stylesheet" href="public/css/style.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -92,11 +92,11 @@
             <div class="restaurants__list">
                 <h2>Restaurants</h2>
                 <div class="gal">
-                    <a href="sass/pages/menu-laPaletteDuGout.html">
+                    <a href="./menu-laPaletteDuGout.html">
                         <div class="card">
                         <div class="card__pic">
                             <span class="new"><p class="new--font">Nouveau</p></span>
-                            <img class="picture picture--roundedTop" src="img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"alt="Photographie d'un plat chez La palette du goût."/>
+                            <img class="picture picture--roundedTop" src="*img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"alt="Photographie d'un plat chez La palette du goût."/>
                         </div>
 
                         <div class="card__text">
@@ -115,7 +115,7 @@
                         <div class="card">
                         <div class="card__pic">
                             <span class="new"><p class="new--font">Nouveau</p></span>
-                            <img class="picture picture--center picture--roundedTop" src="img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"alt="Photographie d'un plat chez La note enchantée."/>
+                            <img class="picture picture--center picture--roundedTop" src="*img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"alt="Photographie d'un plat chez La note enchantée."/>
                         </div>
 
                         <div class="card__text">
@@ -133,7 +133,7 @@
                     <a href="#">
                         <div class="card">
                         <div class="card__pic">
-                            <img class="picture picture--roundedTop" src="img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"alt="Photographie d'un plat chez À la française."/>
+                            <img class="picture picture--roundedTop" src="*img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"alt="Photographie d'un plat chez À la française."/>
                         </div>
 
                         <div class="card__text">
@@ -151,7 +151,7 @@
                     <a href="#">
                         <div class="card">
                         <div class="card__pic">
-                            <img class="picture picture--roundedTop" src="img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"alt="Photographie d'un plat chez Le délice des sens."/>
+                            <img class="picture picture--roundedTop" src="*img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"alt="Photographie d'un plat chez Le délice des sens."/>
                         </div>
 
                         <div class="card__text">
