Review index.html
Rework de l'en-tête, recherche, boutons explore.

--- a/index.html
+++ b/index.html
@@ -23,12 +23,8 @@
     <main>
         <section id="search">
             <form class="search__place">
-                <div class="">
-                    <i class="fa-solid fa-location-dot"></i>
-                </div>
-                <div class="place--text">
-                    <input type="search" value="Paris, Belleville"/>
-                </div>
+                    <i class="fa-solid fa-location-dot fa-2x icon--style icon--marginR"></i>
+                    <input type="text" placeholder="Paris, Belleville "/>
             </form>
         </section>
 
@@ -36,11 +32,10 @@
             <div class="reservation">
                 <h2>Réservez le menu qui vous convient</h2>
                 <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-                <button class="btn__explore btn--rouned">
+                <button class="btn--gradiant btn--rouned">
                     <p>Explorer nos restaurants</p>
                 </button>
             </div>
-            
         </section>
 
         <section id="fonction">
@@ -172,7 +167,7 @@
     
 
     <footer>
-        <h3>ohmyfood</h3>
+        <h3 class="logoWhite">ohmyfood</h3>
         <ul>
             <li>
                 <a href="#">
