--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <div class="reservation">
                 <h2>Réservez le menu qui vous convient</h2>
                 <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-                <button class="btn--gradiant btn--rouned">
-                    <p>Explorer nos restaurants</p>
-                </button>
+                <a href="#restaurants">
+                    <button class="btn--gradiant btn--rouned">Explorer nos restaurants</button>
+                </a>
             </div>
         </section>
 
