--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         </div>
 
                         
-                        <div class="sticker sticker--backPurple">
+                        <div class="sticker sticker--backGrey">
                             <div class="sticker__stage sticker--circle">
                                 <p class="sticker--nbr">3</p>
                             </div>
