--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </form>
         </section>
 
-        <section id="reserve">
+        <section id="reserve" class="">
             <div class="reservation">
                 <h2>Réservez le menu qui vous convient</h2>
                 <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
@@ -38,7 +38,7 @@
             </div>
         </section>
 
-        <section id="fonction">
+        <section id="fonction" class="box--offset">
             <div class="fonctionnement">
                 <h2>Fonctionnement</h2>
                     <div class="pannel">
@@ -73,7 +73,7 @@
                                 <p class="sticker--nbr">3</p>
                             </div>
                             <div class="sticker__icon">
-                                <i class="fa-solid fa-store fa-4x icon--stylizedPurple"></i>
+                                <i class="fa-solid fa-store fa-4x icon--stylized"></i>
                             </div>
                             <div class="sticker__text">
                                 <p class="text--sizing">Dégustez au restaurant</p>
@@ -83,7 +83,7 @@
             </div>
         </section>
 
-        <section id="restaurants">
+        <section id="restaurants" class="box--offset">
             <div class="restaurants__list">
                 <h2>Restaurants</h2>
                 <div class="gal">
@@ -91,7 +91,7 @@
                         <div class="card">
                         <div class="card__pic">
                             <span class="new"><p class="new--font">Nouveau</p></span>
-                            <img class="picture picture--roundedTop" src="*img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"alt="Photographie d'un plat chez La palette du goût."/>
+                            <img class="picture picture--roundedTop" src="img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"alt="Photographie d'un plat chez La palette du goût."/>
                         </div>
 
                         <div class="card__text">
@@ -110,7 +110,7 @@
                         <div class="card">
                         <div class="card__pic">
                             <span class="new"><p class="new--font">Nouveau</p></span>
-                            <img class="picture picture--center picture--roundedTop" src="*img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"alt="Photographie d'un plat chez La note enchantée."/>
+                            <img class="picture picture--center picture--roundedTop" src="img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"alt="Photographie d'un plat chez La note enchantée."/>
                         </div>
 
                         <div class="card__text">
@@ -128,7 +128,7 @@
                     <a href="#">
                         <div class="card">
                         <div class="card__pic">
-                            <img class="picture picture--roundedTop" src="*img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"alt="Photographie d'un plat chez À la française."/>
+                            <img class="picture picture--roundedTop" src="img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"alt="Photographie d'un plat chez À la française."/>
                         </div>
 
                         <div class="card__text">
@@ -146,7 +146,7 @@
                     <a href="#">
                         <div class="card">
                         <div class="card__pic">
-                            <img class="picture picture--roundedTop" src="*img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"alt="Photographie d'un plat chez Le délice des sens."/>
+                            <img class="picture picture--roundedTop" src="img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"alt="Photographie d'un plat chez Le délice des sens."/>
                         </div>
 
                         <div class="card__text">
