--- a/menu-laPaletteDuGout.html
+++ b/menu-laPaletteDuGout.html
@@ -2,21 +2,21 @@
 <html lang="fr">
 
 <head>
-    <meta charset="utf-8"/>
-    <link rel="shortcut icon" type="image/png" href=""/>
-    <link rel="stylesheet" href="/public/css/reset.css"/>
-    <link rel="stylesheet" href="/public/css/style.css"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/28db65c75a.js" crossorigin="anonymous"></script>
-    <title>Oh My Food</title>
+        <meta charset="utf-8"/>
+        <link rel="shortcut icon" type="image/png" href=""/>
+        <link rel="stylesheet" href="public/css/normalize.css"/>
+        <link rel="stylesheet" href="public/css/style.css"/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/28db65c75a.js" crossorigin="anonymous"></script>
+        <title>Oh My Food</title>
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <a href="/index.html"><i class="fa-solid fa-arrow-left fa-3x"></i></a>
+            <a href="/index.html"><i class="fa-solid fa-arrow-left fa-4x arrow--position"></i></a>
             <a href="#"><img src="/img/Logo/ohmyfood.png"/></a>
         </div>
     </header>
@@ -26,15 +26,15 @@
             <img class="photo__profil" src="/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo"/>
         </section>
 
-        <section class="name">
-            <div>
+        <section class="box--offset box--rounded box--color box--position">
+            <div class="name">
                 <h1 class="name__restaurant">La palette du goût</h1>
                 <i class="fa-regular fa-heart fa-4x"></i>
             </div>
         </section>
 
         <section class="menu">
-            <h2>Entrées</h2>
+            <h2>ENTRÉES</h2>
             <div class="pannel">
                 <div class="sticker sticker--backGrey">
                     <div class="sticker__text">
@@ -64,14 +64,16 @@
             </div>
         </section>
 
-        <section class="commander">
-
+        <section class="command">
+            <a href="#">
+                <button class="btn--gradiant btn--rouned">Commander</button>
+            </a>
         </section>
     </main>
     
 
     <footer>
-        <h3>ohmyfood</h3>
+        <h3 class="logoWhite">ohmyfood</h3>
         <ul>
             <li>
                 <a href="#">
