--- a/menu-laPaletteDuGout.html
+++ b/menu-laPaletteDuGout.html
@@ -22,46 +22,42 @@
     </header>
 
     <main>
-        <section class="couverture">
+        <section class="profil">
             <img class="photo__profil" src="/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo"/>
         </section>
 
-        <section class="box--offset box--rounded box--color box--position">
+        <section id="carte" class="box--offset box--rounded box--color box--position">
             <div class="name">
                 <h1 class="name__restaurant">La palette du goût</h1>
                 <i class="fa-regular fa-heart fa-4x"></i>
             </div>
-        </section>
-
-        <section class="menu">
-            <h2>ENTRÉES</h2>
-            <div class="pannel">
-                <div class="sticker sticker--backGrey">
-                    <div class="sticker__text">
-                        <div>
-                            <p class="text--sizing">Fricassée d'escargot</p>
-                            <p class="text--sizing">Au piment d'Espelette</p>
+            <div class="menu">
+                <div class="firstPlate">
+                    <h3 class="menu--fonts menu--under">ENTRÉES</h3>
+                    <div class="menu-pannel">
+                        <div class="plate">
+                            <div class="plate-details">
+                                <div class="plate__txt">
+                                    <h4 class="text--sizing fonts--size fonts--margin">Fricassée d'escargot</h4>
+                                    <p class="fonts--weight">Au piment d'Espelette</p>
+                                </div>
+                                <div class="plate__price">
+                                    <p class="text--sizing fonts--size fonts--margin price--align fonts--bold">25€</p>
+                                </div>
+                            </div>
                         </div>
-                        <div>
-                            <p class="text--sizing">25€</p>
-                        </div>
-
                     </div>
                 </div>
 
-                <div class="sticker sticker--backGrey">
-                    <div class="sticker__text">
-                        <p class="text--sizing">Choisissez un restaurant</p>
-                    </div>
+                <div class="secondPlate">
+                    <h3 class="menu--fonts menu--under">PLATS</h3>
                 </div>
 
-                <div class="sticker sticker--backGrey">
-                    <div class="sticker__text">
-                        <p class="text--sizing">Choisissez un restaurant</p>
-                    </div>
+                <div class="thirdPlate">
+                    <h3 class="menu--fonts menu--under">DESSERTS</h3>
                 </div>
-
             </div>
+            
         </section>
 
         <section class="command">
