--- a/menu-laPaletteDuGout.html
+++ b/menu-laPaletteDuGout.html
@@ -46,15 +46,113 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="plate">
+                            <div class="plate-details">
+                                <div class="plate__txt">
+                                    <h4 class="text--sizing fonts--size fonts--margin">Foie gras de canard mi-cuit</h4>
+                                    <p class="fonts--weight">Et ses copeaux de truffe noire</p>
+                                </div>
+                                <div class="plate__price">
+                                    <p class="text--sizing fonts--size fonts--margin price--align fonts--bold">35€</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="plate">
+                            <div class="plate-details">
+                                <div class="plate__txt">
+                                    <h4 class="text--sizing fonts--size fonts--margin">Oeuf au plat</h4>
+                                    <p class="fonts--weight">Assaisonné à la truffe sur lit de caviar</p>
+                                </div>
+                                <div class="plate__price">
+                                    <p class="text--sizing fonts--size fonts--margin price--align fonts--bold">20€</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
                 <div class="secondPlate">
                     <h3 class="menu--fonts menu--under">PLATS</h3>
+                    <div class="menu-pannel">
+                        <div class="plate">
+                            <div class="plate-details">
+                                <div class="plate__txt">
+                                    <h4 class="text--sizing fonts--size fonts--margin">Filet de boeuf aux herbes</h4>
+                                    <p class="fonts--weight">Accompagné de sa ribambelle de légumes</p>
+                                </div>
+                                <div class="plate__price">
+                                    <p class="text--sizing fonts--size fonts--margin price--align fonts--bold">40€</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="plate">
+                            <div class="plate-details">
+                                <div class="plate__txt">
+                                    <h4 class="text--sizing fonts--size fonts--margin">Parmentier de queue de boeuf</h4>
+                                    <p class="fonts--weight">À la truffe noire sur sa purée de panais</p>
+                                </div>
+                                <div class="plate__price">
+                                    <p class="text--sizing fonts--size fonts--margin price--align fonts--bold">35€</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="plate">
+                            <div class="plate-details">
+                                <div class="plate__txt">
+                                    <h4 class="text--sizing fonts--size fonts--margin">Filet de turbot</h4>
+                                    <p class="fonts--weight">Aux agrumes</p>
+                                </div>
+                                <div class="plate__price">
+                                    <p class="text--sizing fonts--size fonts--margin price--align fonts--bold">44€</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="thirdPlate">
                     <h3 class="menu--fonts menu--under">DESSERTS</h3>
+                    <div class="menu-pannel">
+                        <div class="plate">
+                            <div class="plate-details">
+                                <div class="plate__txt">
+                                    <h4 class="text--sizing fonts--size fonts--margin">Paris-Brest</h4>
+                                    <p class="fonts--weight">Revisité</p>
+                                </div>
+                                <div class="plate__price">
+                                    <p class="text--sizing fonts--size fonts--margin price--align fonts--bold">18€</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="plate">
+                            <div class="plate-details">
+                                <div class="plate__txt">
+                                    <h4 class="text--sizing fonts--size fonts--margin">Macaron au chocolat d'exception</h4>
+                                    <p class="fonts--weight">Et glace à la vanille de Madagascar</p>
+                                </div>
+                                <div class="plate__price">
+                                    <p class="text--sizing fonts--size fonts--margin price--align fonts--bold">22€</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="plate">
+                            <div class="plate-details">
+                                <div class="plate__txt">
+                                    <h4 class="text--sizing fonts--size fonts--margin">Mousse au chocolat</h4>
+                                    <p class="fonts--weight">Au piment d'Espelette et à la truffe noirer</p>
+                                </div>
+                                <div class="plate__price">
+                                    <p class="text--sizing fonts--size fonts--margin price--align fonts--bold">23€</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             
