--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <section id="fonction" class="box--offset">
             <div class="fonctionnement">
                 <h2>Fonctionnement</h2>
-                    <div class="pannel">
-                        <div class="sticker sticker--backGrey">
+                    <ol class="pannel">
+                        <li class="sticker sticker--backGrey">
                             <div class="sticker__stage sticker--circle">
                                 <p class="sticker--nbr">1</p>
                             </div>
@@ -52,10 +52,10 @@
                             <div class="sticker__text">
                                 <p class="text--sizing">Choisissez un restaurant</p>
                             </div>
-                        </div>
+                        </li>
 
                         
-                        <div class="sticker sticker--backGrey">
+                        <li class="sticker sticker--backGrey">
                             <div class="sticker__stage sticker--circle">
                                 <p class="sticker--nbr">2</p>
                             </div>
@@ -65,10 +65,10 @@
                             <div class="sticker__text">
                                 <p class="text--sizing">Composez votre menu</p>
                             </div>
-                        </div>
+                        </li>
 
                         
-                        <div class="sticker sticker--backGrey">
+                        <li class="sticker sticker--backGrey">
                             <div class="sticker__stage sticker--circle">
                                 <p class="sticker--nbr">3</p>
                             </div>
@@ -78,8 +78,8 @@
                             <div class="sticker__text">
                                 <p class="text--sizing">Dégustez au restaurant</p>
                             </div>
-                        </div>
-                    </div>
+                        </li>
+                    </ol>
             </div>
         </section>
 
@@ -177,7 +177,7 @@
             </li>
             <li><a href="#"><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</a></li>
             <li><a href="#">Mentions légales</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
         </ul>
     </footer>
 </body>
