--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 </head>
 
 <body>
+    <span class="loader loader--fondu">
+        <div class="loader-welcome">Bienvenue!</div>
+        <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
+    </span>
+
     <header>
         <div class="logo">
             <a href="#"><img src="img/Logo/ohmyfood.png"/></a>
@@ -28,7 +33,7 @@
             </form>
         </section>
 
-        <section id="reserve" class="">
+        <section id="reserve">
             <div class="reservation">
                 <h2>Réservez le menu qui vous convient</h2>
                 <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
@@ -100,7 +105,7 @@
                                 <p class="place-restaurant">Ménilmontant</p>
                             </div>
                             <div class="icn-favorite">
-                                <i class="fa-regular fa-heart fa-4x"></i>
+                                <i class="fa-regular fa-heart fa-4x fav-heart--color fav-heart--background"></i>
                             </div>
                         </div>
                         </div>
@@ -119,7 +124,7 @@
                                 <p class="place-restaurant">Charonne</p>
                             </div>
                             <div class="icn-favorite">
-                                <i class="fa-regular fa-heart fa-4x"></i>
+                                <i class="fa-regular fa-heart fa-4x fav-heart--color fav-heart--background"></i>
                             </div>
                         </div>
                         </div>
@@ -137,7 +142,7 @@
                                 <p class="place-restaurant">Cité Rouge</p>
                             </div>
                             <div class="icn-favorite">
-                                <i class="fa-regular fa-heart fa-4x"></i>
+                                <i class="fa-regular fa-heart fa-4x fav-heart--color fav-heart--background"></i>
                             </div>
                         </div>
                         </div>
@@ -155,7 +160,7 @@
                                 <p class="place-restaurant">Folie-Méricourt</p>
                             </div>
                             <div class="icn-favorite">
-                                <i class="fa-regular fa-heart fa-4x"></i>
+                                <i class="fa-regular fa-heart fa-4x fav-heart--color fav-heart--background"></i>
                             </div>
                         </div>
                         </div>
