--- a/menu-laPaletteDuGout.html
+++ b/menu-laPaletteDuGout.html
@@ -29,7 +29,7 @@
         <section id="carte" class="box--offset box--rounded box--color box--position">
             <div class="name">
                 <h1 class="name__restaurant">La palette du goût</h1>
-                <i class="fa-regular fa-heart fa-4x"></i>
+                <i class="fa-regular fa-heart fa-4x fav-heart--color fav-heart--background"></i>
             </div>
             <div class="menu">
                 <div class="firstPlate">
