Review 3.5 Heart Icon fixed
Gradient et couleur fixés

--- a/index.html
+++ b/index.html
@@ -105,7 +105,10 @@
                                 <p class="place-restaurant">Ménilmontant</p>
                             </div>
                             <div class="icn-favorite">
-                                <i class="fa-regular fa-heart fa-4x fav-heart--color fav-heart--background"></i>
+                                <div class="heart-container">
+                                    <i class="fa-regular fa-heart fa-4x fav-heart--black"></i>
+                                    <i class="fa-solid fa-heart fav-heart--color heart-animated"></i>
+                                </div>
                             </div>
                         </div>
                         </div>
@@ -124,7 +127,10 @@
                                 <p class="place-restaurant">Charonne</p>
                             </div>
                             <div class="icn-favorite">
-                                <i class="fa-regular fa-heart fa-4x fav-heart--color fav-heart--background"></i>
+                                <div class="heart-container">
+                                    <i class="fa-regular fa-heart fa-4x fav-heart--black"></i>
+                                    <i class="fa-solid fa-heart fav-heart--color heart-animated"></i>
+                                </div>
                             </div>
                         </div>
                         </div>
@@ -142,7 +148,10 @@
                                 <p class="place-restaurant">Cité Rouge</p>
                             </div>
                             <div class="icn-favorite">
-                                <i class="fa-regular fa-heart fa-4x fav-heart--color fav-heart--background"></i>
+                                <div class="heart-container">
+                                    <i class="fa-regular fa-heart fa-4x fav-heart--black"></i>
+                                    <i class="fa-solid fa-heart fav-heart--color heart-animated"></i>
+                                </div>
                             </div>
                         </div>
                         </div>
@@ -160,7 +169,10 @@
                                 <p class="place-restaurant">Folie-Méricourt</p>
                             </div>
                             <div class="icn-favorite">
-                                <i class="fa-regular fa-heart fa-4x fav-heart--color fav-heart--background"></i>
+                                <div class="heart-container">
+                                    <i class="fa-regular fa-heart fa-4x fav-heart--black"></i>
+                                    <i class="fa-solid fa-heart fav-heart--color heart-animated"></i>
+                                </div>
                             </div>
                         </div>
                         </div>
