--- a/menu-laPaletteDuGout.html
+++ b/menu-laPaletteDuGout.html
@@ -30,7 +30,7 @@
             <div class="name">
                 <h1 class="name__restaurant">La palette du goût</h1>
                 <div class="heart-container">
-                    <i class="fa-regular fa-heart fa-4x"></i>
+                    <i class="fa-regular fa-heart fa-4x fav-heart--black"></i>
                     <i class="fa-solid fa-heart fav-heart--color heart-animated"></i>
                 </div>
             </div>
