--- a/menu-laPaletteDuGout.html
+++ b/menu-laPaletteDuGout.html
@@ -45,7 +45,7 @@
                                     <p class="fonts--weight">Au piment d'Espelette</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin price--align fonts--bold">25€</p>
+                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">25€</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
