--- a/menu-leDeliceDesSens.html
+++ b/menu-leDeliceDesSens.html
@@ -23,12 +23,12 @@
 
     <main>
         <section class="profil">
-            <img class="photo__profil" src="/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo"/>
+            <img class="photo__profil" src="/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo"/>
         </section>
 
         <section id="carte" class="box--offset box--rounded box--color box--position">
             <div class="name">
-                <h1 class="name__restaurant">La palette du goût</h1>
+                <h1 class="name__restaurant">Le délice des sens</h1>
                 <div class="heart-container">
                     <i class="fa-regular fa-heart fa-4x fav-heart--black"></i>
                     <i class="fa-solid fa-heart fav-heart--color heart-animated"></i>
@@ -41,8 +41,8 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Fricassée d'escargot</h4>
-                                    <p class="fonts--weight">Au piment d'Espelette</p>
+                                    <h4 class="text--sizing fonts--size fonts--margin">Tartare de thon</h4>
+                                    <p class="fonts--weight">Assaisonné au yuzu</p>
                                 </div>
                                 <div class="plate__price">
                                     <p class="text--sizing fonts--size fonts--margin fonts--bold">25€</p>
@@ -56,8 +56,8 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Foie gras de canard mi-cuit</h4>
-                                    <p class="fonts--weight">Et ses copeaux de truffe noire</p>
+                                    <h4 class="text--sizing fonts--size fonts--margin">Bouchée de homard croustillant</h4>
+                                    <p class="fonts--weight">Et sa farandole de petits légumes</p>
                                 </div>
                                 <div class="plate__price">
                                     <p class="text--sizing fonts--size fonts--margin fonts--bold">35€</p>
@@ -71,8 +71,8 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Oeuf au plat</h4>
-                                    <p class="fonts--weight">Assaisonné à la truffe sur lit de caviar</p>
+                                    <h4 class="text--sizing fonts--size fonts--margin">Velouté de cèpes</h4>
+                                    <p class="fonts--weight">Aux truffes</p>
                                 </div>
                                 <div class="plate__price">
                                     <p class="text--sizing fonts--size fonts--margin fonts--bold">20€</p>
@@ -92,8 +92,8 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Filet de boeuf aux herbes</h4>
-                                    <p class="fonts--weight">Accompagné de sa ribambelle de légumes</p>
+                                    <h4 class="text--sizing fonts--size fonts--margin">Poulet rôti aux herbes de Provence</h4>
+                                    <p class="fonts--weight">Et sa crème de truffe</p>
                                 </div>
                                 <div class="plate__price">
                                     <p class="text--sizing fonts--size fonts--margin fonts--bold">40€</p>
@@ -107,8 +107,8 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Parmentier de queue de boeuf</h4>
-                                    <p class="fonts--weight">À la truffe noire sur sa purée de panais</p>
+                                    <h4 class="text--sizing fonts--size fonts--margin">Langouste rôtie</h4>
+                                    <p class="fonts--weight">Et ses légumes de saison</p>
                                 </div>
                                 <div class="plate__price">
                                     <p class="text--sizing fonts--size fonts--margin fonts--bold">35€</p>
@@ -122,8 +122,8 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Filet de turbot</h4>
-                                    <p class="fonts--weight">Aux agrumes</p>
+                                    <h4 class="text--sizing fonts--size fonts--margin">Côte de boeuf Angus</h4>
+                                    <p class="fonts--weight">Et sa purée de panais</p>
                                 </div>
                                 <div class="plate__price">
                                     <p class="text--sizing fonts--size fonts--margin fonts--bold">44€</p>
@@ -143,8 +143,8 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Paris-Brest</h4>
-                                    <p class="fonts--weight">Revisité</p>
+                                    <h4 class="text--sizing fonts--size fonts--margin">Farandole de desserts</h4>
+                                    <p class="fonts--weight">Du chef</p>
                                 </div>
                                 <div class="plate__price">
                                     <p class="text--sizing fonts--size fonts--margin fonts--bold">18€</p>
@@ -158,8 +158,8 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Macaron au chocolat d'exception</h4>
-                                    <p class="fonts--weight">Et glace à la vanille de Madagascar</p>
+                                    <h4 class="text--sizing fonts--size fonts--margin">Crème brulée</h4>
+                                    <p class="fonts--weight">Revisitée</p>
                                 </div>
                                 <div class="plate__price">
                                     <p class="text--sizing fonts--size fonts--margin fonts--bold">22€</p>
@@ -173,8 +173,8 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Mousse au chocolat</h4>
-                                    <p class="fonts--weight">Au piment d'Espelette et à la truffe noire</p>
+                                    <h4 class="text--sizing fonts--size fonts--margin">Tiramisu </h4>
+                                    <p class="fonts--weight">À la noisette</p>
                                 </div>
                                 <div class="plate__price">
                                     <p class="text--sizing fonts--size fonts--margin fonts--bold">23€</p>
