--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             <div class="restaurants__list">
                 <h2>Restaurants</h2>
                 <div class="gal">
+
                     <a href="./menu-laPaletteDuGout.html">
                         <div class="card">
                         <div class="card__pic">
@@ -114,7 +115,7 @@
                         </div>
                     </a>
 
-                    <a href="#">
+                    <a href="./menu-laNoteEnchantee.html">
                         <div class="card">
                         <div class="card__pic">
                             <span class="new"><p class="new--font">Nouveau</p></span>
@@ -136,7 +137,7 @@
                         </div>
                     </a>
                     
-                    <a href="#">
+                    <a href="./menu-aLaFrancaise.html">
                         <div class="card">
                         <div class="card__pic">
                             <img class="picture picture--roundedTop" src="img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"alt="Photographie d'un plat chez À la française."/>
@@ -157,7 +158,7 @@
                         </div>
                     </a>
 
-                    <a href="#">
+                    <a href="./menu-leDeliceDesSens.html">
                         <div class="card">
                         <div class="card__pic">
                             <img class="picture picture--roundedTop" src="img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"alt="Photographie d'un plat chez Le délice des sens."/>
