--- a/menu-aLaFrancaise.html
+++ b/menu-aLaFrancaise.html
@@ -23,12 +23,12 @@
 
     <main>
         <section class="profil">
-            <img class="photo__profil" src="/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo"/>
+            <img class="photo__profil" src="/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo"/>
         </section>
 
         <section id="carte" class="box--offset box--rounded box--color box--position">
             <div class="name">
-                <h1 class="name__restaurant">La palette du goût</h1>
+                <h1 class="name__restaurant">À la française</h1>
                 <div class="heart-container">
                     <i class="fa-regular fa-heart fa-4x fav-heart--black"></i>
                     <i class="fa-solid fa-heart fav-heart--color heart-animated"></i>
@@ -41,8 +41,8 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Fricassée d'escargot</h4>
-                                    <p class="fonts--weight">Au piment d'Espelette</p>
+                                    <h4 class="text--sizing fonts--size fonts--margin">Tartare de poulpe acidulé</h4>
+                                    <p class="fonts--weight">Aux zestes d'orange</p>
                                 </div>
                                 <div class="plate__price">
                                     <p class="text--sizing fonts--size fonts--margin fonts--bold">25€</p>
@@ -56,8 +56,8 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Foie gras de canard mi-cuit</h4>
-                                    <p class="fonts--weight">Et ses copeaux de truffe noire</p>
+                                    <h4 class="text--sizing fonts--size fonts--margin">Velouté de légumes d'antan</h4>
+                                    <p class="fonts--weight">Carotte, panais, topinambour</p>
                                 </div>
                                 <div class="plate__price">
                                     <p class="text--sizing fonts--size fonts--margin fonts--bold">35€</p>
@@ -71,8 +71,8 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Oeuf au plat</h4>
-                                    <p class="fonts--weight">Assaisonné à la truffe sur lit de caviar</p>
+                                    <h4 class="text--sizing fonts--size fonts--margin">Soupe à l'oignon</h4>
+                                    <p class="fonts--weight">Revisitée</p>
                                 </div>
                                 <div class="plate__price">
                                     <p class="text--sizing fonts--size fonts--margin fonts--bold">20€</p>
@@ -92,8 +92,8 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Filet de boeuf aux herbes</h4>
-                                    <p class="fonts--weight">Accompagné de sa ribambelle de légumes</p>
+                                    <h4 class="text--sizing fonts--size fonts--margin">Coquilles Saint-Jacques</h4>
+                                    <p class="fonts--weight">Accompagnées d'une purée de panais</p>
                                 </div>
                                 <div class="plate__price">
                                     <p class="text--sizing fonts--size fonts--margin fonts--bold">40€</p>
@@ -107,8 +107,8 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Parmentier de queue de boeuf</h4>
-                                    <p class="fonts--weight">À la truffe noire sur sa purée de panais</p>
+                                    <h4 class="text--sizing fonts--size fonts--margin">Magret de canard</h4>
+                                    <p class="fonts--weight">Et parmentier de pommes de terre</p>
                                 </div>
                                 <div class="plate__price">
                                     <p class="text--sizing fonts--size fonts--margin fonts--bold">35€</p>
@@ -122,8 +122,8 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Filet de turbot</h4>
-                                    <p class="fonts--weight">Aux agrumes</p>
+                                    <h4 class="text--sizing fonts--size fonts--margin">Pigeonneau d’Ille-et-Vilaine</h4>
+                                    <p class="fonts--weight">Sur son lit de gnocchis aux légumes</p>
                                 </div>
                                 <div class="plate__price">
                                     <p class="text--sizing fonts--size fonts--margin fonts--bold">44€</p>
@@ -143,8 +143,8 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Paris-Brest</h4>
-                                    <p class="fonts--weight">Revisité</p>
+                                    <h4 class="text--sizing fonts--size fonts--margin">Pétales de violettes glacés</h4>
+                                    <p class="fonts--weight">Et purée de noisettes</p>
                                 </div>
                                 <div class="plate__price">
                                     <p class="text--sizing fonts--size fonts--margin fonts--bold">18€</p>
@@ -158,8 +158,8 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Macaron au chocolat d'exception</h4>
-                                    <p class="fonts--weight">Et glace à la vanille de Madagascar</p>
+                                    <h4 class="text--sizing fonts--size fonts--margin">Fondant au chocolat</h4>
+                                    <p class="fonts--weight">Revisité</p>
                                 </div>
                                 <div class="plate__price">
                                     <p class="text--sizing fonts--size fonts--margin fonts--bold">22€</p>
@@ -173,8 +173,8 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Mousse au chocolat</h4>
-                                    <p class="fonts--weight">Au piment d'Espelette et à la truffe noire</p>
+                                    <h4 class="text--sizing fonts--size fonts--margin">Millefeuille croustillant</h4>
+                                    <p class="fonts--weight">Myrtilles et pâte d’amande</p>
                                 </div>
                                 <div class="plate__price">
                                     <p class="text--sizing fonts--size fonts--margin fonts--bold">23€</p>
