--- a/menu-laNoteEnchantee.html
+++ b/menu-laNoteEnchantee.html
@@ -23,12 +23,12 @@
 
     <main>
         <section class="profil">
-            <img class="photo__profil" src="/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo"/>
+            <img class="photo__profil" src="/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo"/>
         </section>
 
         <section id="carte" class="box--offset box--rounded box--color box--position">
             <div class="name">
-                <h1 class="name__restaurant">La palette du goût</h1>
+                <h1 class="name__restaurant">La note enchantée</h1>
                 <div class="heart-container">
                     <i class="fa-regular fa-heart fa-4x fav-heart--black"></i>
                     <i class="fa-solid fa-heart fav-heart--color heart-animated"></i>
@@ -41,8 +41,8 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Fricassée d'escargot</h4>
-                                    <p class="fonts--weight">Au piment d'Espelette</p>
+                                    <h4 class="text--sizing fonts--size fonts--margin">Ravioles de foie gras</h4>
+                                    <p class="fonts--weight">Accompagnés de leur crème à la truffe</p>                                    </p>
                                 </div>
                                 <div class="plate__price">
                                     <p class="text--sizing fonts--size fonts--margin fonts--bold">25€</p>
@@ -56,8 +56,8 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Foie gras de canard mi-cuit</h4>
-                                    <p class="fonts--weight">Et ses copeaux de truffe noire</p>
+                                    <h4 class="text--sizing fonts--size fonts--margin">Caviar osciètre</h4>
+                                    <p class="fonts--weight">Sur blini à la farine de blé noir</p>
                                 </div>
                                 <div class="plate__price">
                                     <p class="text--sizing fonts--size fonts--margin fonts--bold">35€</p>
@@ -71,11 +71,26 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Oeuf au plat</h4>
-                                    <p class="fonts--weight">Assaisonné à la truffe sur lit de caviar</p>
+                                    <h4 class="text--sizing fonts--size fonts--margin">Homard et espuma de potiron</h4>
+                                    <p class="fonts--weight">Mariné aux zestes d'orange</p>
                                 </div>
                                 <div class="plate__price">
                                     <p class="text--sizing fonts--size fonts--margin fonts--bold">20€</p>
+                                </div>
+                            </div>
+                            <div class="plate__valid">
+                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                            </div>
+                        </div>
+
+                        <div class="plate">
+                            <div class="plate-details">
+                                <div class="plate__txt">
+                                    <h4 class="text--sizing fonts--size fonts--margin">Foie gras de canard cuit entier</h4>
+                                    <p class="fonts--weight">Confiture de figue et pain toasté</p>
+                                </div>
+                                <div class="plate__price">
+                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">35€</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
@@ -92,8 +107,8 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Filet de boeuf aux herbes</h4>
-                                    <p class="fonts--weight">Accompagné de sa ribambelle de légumes</p>
+                                    <h4 class="text--sizing fonts--size fonts--margin">Noix de coquilles Saint-Jacques</h4>
+                                    <p class="fonts--weight">Sur lit de purée de céleri-rave</p>
                                 </div>
                                 <div class="plate__price">
                                     <p class="text--sizing fonts--size fonts--margin fonts--bold">40€</p>
@@ -107,8 +122,8 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Parmentier de queue de boeuf</h4>
-                                    <p class="fonts--weight">À la truffe noire sur sa purée de panais</p>
+                                    <h4 class="text--sizing fonts--size fonts--margin">Langoustine poêlée</h4>
+                                    <p class="fonts--weight">Purée de patate douce</p>
                                 </div>
                                 <div class="plate__price">
                                     <p class="text--sizing fonts--size fonts--margin fonts--bold">35€</p>
@@ -122,8 +137,8 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Filet de turbot</h4>
-                                    <p class="fonts--weight">Aux agrumes</p>
+                                    <h4 class="text--sizing fonts--size fonts--margin">Mijoté de queue de boeuf</h4>
+                                    <p class="fonts--weight">Et riz sauvage aux zestes de citron</p>
                                 </div>
                                 <div class="plate__price">
                                     <p class="text--sizing fonts--size fonts--margin fonts--bold">44€</p>
@@ -143,8 +158,8 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Paris-Brest</h4>
-                                    <p class="fonts--weight">Revisité</p>
+                                    <h4 class="text--sizing fonts--size fonts--margin">Macaron noisette et chocolat</h4>
+                                    <p class="fonts--weight">Glace au caramel brun et sel de Guérande</p>
                                 </div>
                                 <div class="plate__price">
                                     <p class="text--sizing fonts--size fonts--margin fonts--bold">18€</p>
@@ -158,8 +173,8 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Macaron au chocolat d'exception</h4>
-                                    <p class="fonts--weight">Et glace à la vanille de Madagascar</p>
+                                    <h4 class="text--sizing fonts--size fonts--margin">Baba au rhum revisité</h4>
+                                    <p class="fonts--weight">Avec son coulis de citron</p>
                                 </div>
                                 <div class="plate__price">
                                     <p class="text--sizing fonts--size fonts--margin fonts--bold">22€</p>
@@ -173,8 +188,8 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Mousse au chocolat</h4>
-                                    <p class="fonts--weight">Au piment d'Espelette et à la truffe noire</p>
+                                    <h4 class="text--sizing fonts--size fonts--margin">Tarte au citron meringuée</h4>
+                                    <p class="fonts--weight">Déstructurée</p>
                                 </div>
                                 <div class="plate__price">
                                     <p class="text--sizing fonts--size fonts--margin fonts--bold">23€</p>
