--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
         <section id="reserve">
             <div class="reservation">
-                <h2>Réservez le menu qui vous convient</h2>
-                <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+                <h2 class="margin-bot">Réservez le menu qui vous convient</h2>
+                <p class="margin-bot">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
                 <a href="#restaurants">
                     <button class="btn--gradiant btn--rouned">Explorer nos restaurants</button>
                 </a>
