--- a/menu-laPaletteDuGout.html
+++ b/menu-laPaletteDuGout.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="/index.html"><i class="fa-solid fa-arrow-left fa-2x arrow--position"></i></a>
+            <a href="/index.html"><i class="fa-solid fa-arrow-left fa-xl arrow--position"></i></a>
             <a href="#"><img src="/img/Logo/ohmyfood.png"/></a>
         </div>
     </header>
